test/studies/hpcc/RA/marybeth/ra-uint-test4.good
ra-uint-test4.chpl:2: error: Cannot assign to uint(64) from int(64)
